Add required elements

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,27 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+  <div class="header">
+    <h1>Mark Oosterveld</h1>
+    <h2>Code Monkey</h2>
+  </div>
+  <div class="tagline">
+    <h3>Stuff I do</h3>
+    <p>I create things</p>
+  </div>
+  <div class="skills">
+    <h3>Skills</h3>
+    <p>I have skills</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>ECMAScript</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>blog</h3>
+    <p>Check my blog <a href="https://abendigo.github.io/">https://abendigo.github.io/</a>
+    </p>
+  </div>
 </body>
 </html>
